# rpa-enel

./: pyproject.toml
rpa_enel/clients/: base_client.py  client.py  enel.py
rpa_enel/jobs/: energy_consumption.py
rpa_enel/ocr/: ocr_service.py
