[project]
name = "rpa-enel"
version = "0.1.0"
description = ""
authors = [
    {name = "João Alexandre",email = "aleramosfilho@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "easyocr (>=1.7.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
